# verilog_auth

./: Dockerfile  README copy.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main_verigen.yml  main_verilogcodegen.yml
app/: __init__.py
app/auth/: resources.py  urls.py
app/user/: models.py  resources.py  schemas.py  urls.py
