[tool.poetry]
package-mode = false
name = "flask-boilerplate"
version = "0.1.0"
description = ""
authors = ["Anantha Krishnan <akrishnan@opentrends.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
sqlalchemy = "^2.0.30"
flask-marshmallow = "^1.2.1"
flask-cors = "^4.0.1"
flask-restful = "^0.3.10"
flask-sqlalchemy = "^3.1.1"
marshmallow-sqlalchemy = "^1.0.0"
black = "^24.4.2"
flask-jwt-extended = "^4.6.0"
werkzeug = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
